Migrate to Set.of, List.of and Map.of.