@@ -17,7 +17,6 @@
 
 package owl.automaton.acceptance;
 
-import java.util.Collections;
 import java.util.List;
 import jhoafparser.ast.AtomAcceptance;
 import jhoafparser.ast.BooleanExpression;
@@ -45,7 +44,7 @@ public final class NoneAcceptance implements OmegaAcceptance {
 
   @Override
   public List<Object> getNameExtra() {
-    return Collections.emptyList();
+    return List.of();
   }
 
 
