@@ -3,7 +3,7 @@ package owl.translations.ltl2ldba.breakpoint;
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
 
-import java.util.Collections;
+import java.util.Set;
 import org.junit.Test;
 import owl.factories.Factories;
 import owl.ltl.BooleanConstant;
@@ -19,7 +19,7 @@ public class EvaluateVisitorTest {
     GOperator operator = (GOperator) LtlParser.parse("G(p2)").formula;
     LabelledFormula formula = LtlParser.parse("(p1) U (X((G(F(G(p2)))) & (F(X(X(G(p2)))))))");
     Factories factories = TestEnvironment.get().factorySupplier().getFactories(formula);
-    EvaluateVisitor visitor = new EvaluateVisitor(Collections.singleton(operator),
+    EvaluateVisitor visitor = new EvaluateVisitor(Set.of(operator),
       factories.eqFactory.getTrue());
     assertThat(formula.accept(visitor), is(BooleanConstant.FALSE));
   }
